.kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-kube
spec:
  replicas: 3
  selector:
    matchLabels:
      app: otus-kube
  template:
    metadata:
      labels:
        app: otus-kube
    spec:
      containers:
        - name: otus-kube
          image: mazurenkoaa/otus_kube:v1
          ports:
            - containerPort: 8000
