.kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-kube-service
spec:
  selector:
    app: otus-kube
  ports:
    - protocol: TCP
      port: 8000
